still fixing wrap

--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ table {
 
 .cell-text {
     color: white;
-    width: 100%;
     z-index: 5;
     position: relative;
     display: block;
